--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=25w08a
-yarn_mappings=25w08a+build.4
+minecraft_version=1.21.5
+yarn_mappings=1.21.5+build.1
 loader_version=0.16.10
 # Mod Properties
-mod_version=1.0-SNAPSHOT
+mod_version=0.1.0
 maven_group=com.iceyetiwins
 archives_base_name=firefly-in-a-bottle
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.118.0+1.21.5
+fabric_version=0.119.5+1.21.5
