added lambdynamiclights support with light level 7

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,14 @@ repositories {
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
     // See https://docs.gradle.org/current/userguide/declaring_repositories.html
     // for more information about repositories.
+    maven {
+        name = "Gegy"
+        url = uri("https://maven.gegy.dev")
+    }
+    maven {
+        name = "Terraformers"
+        url = "https://maven.terraformersmc.com/"
+    }
 }
 
 dependencies {
@@ -36,6 +44,9 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+    modLocalRuntime("dev.lambdaurora.lambdynamiclights:lambdynamiclights-runtime:4.2.3+1.21.5")
+    modImplementation("com.terraformersmc:modmenu:14.0.0-rc.1")
 }
 
 processResources {
